# backend_for_notes_app

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
db/: db.py  models.py
routers/: routers.py  user.py
